refactor: Update class, method, and field names for consistency and clarity in authentication, organization, and user modules